calculator: fixed bug for vat per bill calculator cleaned rules, we may spare some sql vmpsplugin added loading of rule, if not complete Controller invoice, added "writeJs = false;" to prevent writing of js in pdfs removed warning for the message, cancel to prevent notice in j3 added min-width to admin menue to prevent collapsing in browser (thx Matej)
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/trunk/virtuemart@8630 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/administrator/components/com_virtuemart/assets/css/admin_ui.css
+++ b/administrator/components/com_virtuemart/assets/css/admin_ui.css
@@ -11,7 +11,7 @@
     min-height: 540px;
     }
 
-.virtuemart-admin-area .menu-wrapper {width: 190px;overflow:hidden;}
+.virtuemart-admin-area .menu-wrapper {min-width: 190px;overflow:hidden;}
 .virtuemart-admin-area .admin-content {margin: 0;border-left: solid #b4b4b4 1px;-webkit-flex-basis: 99%; flex-basis: 99%;}
 .virtuemart-admin-area .btn.btn-small {
     margin-bottom: 5px;
